--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet" />
 
+
   <!-- Seu CSS -->
   <link rel="stylesheet" href="style.css" />
 
@@ -16,6 +17,15 @@
 </head>
 <body>
   <h1>A vida dos patos</h1>
-  <p>Patos são aves aquáticas pertencentes à família Anatidae, conhecidas por sua habilidade de nadar e voar. Eles habitam uma variedade de ambientes aquáticos, como lagos, rios, pântanos e áreas costeiras, adaptando-se tanto a regiões de água doce quanto salgada.</p>
+  <p>Patos são aves <strong><em>aquáticas pertecentes</em></strong> à família Anatidae, conhecidas por sua habilidade de nadar e voar. Eles habitam uma variedade de ambientes aquáticos, como lagos, rios, pântanos e áreas 
+    costeiras, adaptando-se tanto a regiões de água doce quanto salgada.</p>
+
+    <p>Existem muitas espécies de patos no mundo, sendo o pato-real (Anas platyrhynchos) uma das mais comuns e também a base dos patos domesticados.
+       Outras espécies conhecidas incluem o pato-mandarim, famoso por sua coloração vibrante, e o pato-mergulhão, que é ótimo caçador subaquático.</p>
+
+       <div class="patoImagem1" >
+        <img src="patoImagem1" alt= "patoImagem1"/>
+       </div>
+
 </body>
 </html>
